...
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_chat"
                android:layout_width="0dp"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/toolbar_color"
                android:theme="@style/ToolbarTheme"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_no_internet"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@color/title_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/chat_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_profile"
                        android:layout_width="@dimen/width_40"
...
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="RJ" />

                    <TextView
                        android:id="@+id/text_view_last_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:ellipsize="end"
...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shadow_view"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chat_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/chat_message_bar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
...
                android:paddingRight="@dimen/margin_16"
                android:paddingBottom="@dimen/margin_8"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageButton
                    android:id="@+id/image_view_pick_gallery_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoMirrored="true"
                    android:background="@color/white"
                    android:contentDescription="@string/chat_send_button_description"
                    android:padding="@dimen/padding_8"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    tools:targetApi="kitkat" />

                <EditText
                    android:id="@+id/edit_text_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/type_message"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/image_view_send"
                    app:layout_constraintStart_toEndOf="@+id/image_view_pick_gallery_image"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill" />

                <ImageButton
                    android:id="@+id/image_view_send"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_60_opacity"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/expanded_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/expanded_image_holder" />
    </FrameLayout>
</layout>
