...
                    app:layout_constraintTop_toTopOf="@+id/divider"
                    tools:text="RJ" />



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    style="@style/signup_editext_style"
                    android:hint="@string/enter_first_name"
                    app:hintTextAppearance="@style/hint_style"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_pen"
                    app:layout_constraintTop_toBottomOf="@+id/image_profile_background">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:digits="@string/myDigits"
                        android:fontFamily="@font/poppins_regular"
                        android:imeOptions="actionNext"
...
                    app:hintTextAppearance="@style/hint_style"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_pen2"
                    app:layout_constraintTop_toBottomOf="@+id/name_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:backgroundTint="@color/new_user_button_color"
                        android:digits="@string/myDigits"
                        android:fontFamily="@font/poppins_regular"
...
                    android:src="@mipmap/ic_pen"
                    app:layout_constraintBottom_toBottomOf="@+id/last_name_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/last_name_layout" />

                <Button
                    android:id="@+id/button_update"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_40"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/ractangular_white"
                    android:text="@string/update"
...
